<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleBar"
        android:gravity="center">

        <ImageView
            android:src="@drawable/icon"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleText"
            android:textStyle="bold|italic"/>

        <ImageView
            android:src="@drawable/icon"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/sabor"
            android:textColor="@color/titleText"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioInteira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pizzaInteira"
                android:textSize="15sp"
                android:onClick="meiaPizzaClicked"
                android:buttonTint="@color/red"/>

            <RadioButton
                android:id="@+id/radioMeia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizzaMeia"
                android:textSize="15sp"
                android:onClick="meiaPizzaClicked"
                android:buttonTint="@color/red"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnSaborMetade1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spnSaborMetade2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </LinearLayout>

        <TextView
            android:text="@string/tamanho"
            android:textColor="@color/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="25sp"/>

        <RadioGroup
            android:id="@+id/rdTamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/pequena"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red" />

            <RadioButton
                android:text="@string/media"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red" />

            <RadioButton
                android:text="@string/grande"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"/>
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="25sp"
                android:textColor="@color/titleText"/>

            <EditText
                android:enabled="false"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="R$ 0"
                android:textSize="15sp"/>
        </LinearLayout>

        <TextView
            android:text="Ingredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/titleText"/>

        <EditText
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:text="OK"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickOk"/>

    </LinearLayout>
</LinearLayout>